ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  rules:
    - host: argocd.kushparmar.devs.surf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https

  tls:
    - hosts:
        - argocd.kushparmar.devs.surf
      secretName: argocd-server-tls
